sort.pancake.BasicPancake.scala.code
var c = 0;

def solve() {
  while(!estTriee()){
    var r = getRayonCrepe(0)
    var j = 0;
    for(i<- 1 to getTaillePile() - c - 1){
      if(getRayonCrepe(i)> r){
        r = getRayonCrepe(i);
        j += 1;
      }
    }
    retiurne(j+1);
    retourne(getTaillePile() - c - 1);
    c += 1;
  }
}